--- a/term-deposit-prediction.ipynb
+++ b/term-deposit-prediction.ipynb
@@ -7,10 +7,9 @@
    "source": [
     "## Introduction\n",
     "\n",
+     
     "\n",
-    "As a member of our data analytics team, your role will involve creating tools that use our operational data to help the business achieve its goals.\n",
-    "\n",
-    "For this project, the objective is to predict whether a client will subscribe to a term deposit (indicated by the variable \"y\" as \"yes\" or \"no\"). Your task is to build a predictive model that determines the likelihood of a client subscribing to a term deposit based on the features provided in the datase"
+    "Predict whether a client will subscribe to a term deposit (indicated by the variable \"y\" as \"yes\" or \"no\"). Your task is to build a predictive model that determines the likelihood of a client subscribing to a term deposit based on the features provided in the datase"
    ]
   },
   {
