--- a/term-deposit-prediction.ipynb
+++ b/term-deposit-prediction.ipynb
@@ -9,7 +9,7 @@
     "\n",
      
     "\n",
-    "Predict whether a client will subscribe to a term deposit (indicated by the variable \"y\" as \"yes\" or \"no\"). Your task is to build a predictive model that determines the likelihood of a client subscribing to a term deposit based on the features provided in the datase"
+    "Predict whether a client will subscribe to a term deposit (indicated by the variable \"y\" as \"yes\" or \"no\"). Main task is to build a predictive model that determines the likelihood of a client subscribing to a term deposit."
    ]
   },
   {
