--- a/term-deposit-prediction.ipynb
+++ b/term-deposit-prediction.ipynb
@@ -2384,7 +2384,7 @@
    "source": [
     "- Precision improved, with fewer false positive errors compared to the model using the default threshold, which may result in better targeting (high-confidence leads).\n",
     "\n",
-    "- Recall decreased. The marketing team might not follow up with clients who would have subscribed\n",
+    "- Recall decreased. The marketing team might not follow up with clients who would have subscribed.\n",
     "\n",
     "- F1 Score improved slightly, which means there's a better balance between precision and recall.\n",
     "\n",
@@ -2450,7 +2450,7 @@
    "id": "b49431f3-2f9b-4304-aace-2c07ee83531a",
    "metadata": {},
    "source": [
-    "- The closer the ROC curve is to the top-left corner, the better the model is at distinguishing between classes, although it is not sensitive to imbalanced data\n",
+    "- The closer the ROC curve is to the top-left corner, the better the model is at distinguishing between classes, although it is not sensitive to imbalanced data.\n",
     "\n",
     "- PR Curve is more informative for imbalanced datasets, especially when interested in the positive class, or when False positives are costly.\n",
     "\n",
